add refresh logic to config client

--- a/easlifemain/photoAny/src/main/resources/bootstrap.properties
+++ b/easlifemain/photoAny/src/main/resources/bootstrap.properties
@@ -12,3 +12,6 @@ spring.cloud.config.username=liunian
 spring.cloud.config.password=chamo
 
 eureka.client.service-url.defaultZone=http://localhost:8260/eureka
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=refresh,info,health
