--- a/easlifemain/configServer/src/main/resources/config/photoAny.properties
+++ b/easlifemain/configServer/src/main/resources/config/photoAny.properties
@@ -1,3 +1,8 @@
 name=test
-id=photo
+id=e655160
 server.port=9310
+management.endpoints.enabled-by-default=true
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=refresh,info,health
+#management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/actuator
